components/canfar/canfa-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: canfar-ingress
  namespace: skaha-system
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  rules:
  - host: "canfar.128-232-226-7.sslip.io"  
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: canfar-service
            port:
              number: 80
  tls:
  - hosts:
    - "canfar.128-232-226-7.sslip.io"
    secretName: canfar-tls-secret
